# dauntless-srv

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs
src/: config.rs  consts.rs  data.rs  frame.rs  main.rs  meta.rs  nt.rs  state.rs  web.rs
www/: index.html  package.json  script.js  styles.css
www/src/: App.jsx  CameraSettings.jsx  Canvas.jsx  Detections.jsx  Frame.jsx  Frames.jsx  Header.jsx  Logo.jsx  Popup.jsx  ProcessingSettings.jsx  Provider.jsx  Tags.jsx  canvas.js  config.js  draw.js  index.html  index.jsx  main.js  utils.js
www/src/styles/: index.css
