[package]
name = "dauntless-srv"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.8.0"
colored = "3.1.1"
dauntless = { git = "https://github.com/ayukmr/dauntless", features = ["serde"] }
ndarray = "0.16.1"
opencv = "0.96.0"
rmp-serde = "1.3.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tungstenite = "0.28.0"
