[package]
name = "dauntless-srv"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.101"
colored = "3.1.1"
dauntless = { git = "https://github.com/ayukmr/dauntless", features = ["serde"] }
rmp-serde = "1.3.1"
nokhwa = { version = "0.10.10", features = ["input-native"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tungstenite = "0.28.0"
rust-embed = "8.11.0"
